Moved old magicblast code without version

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,4 +20,11 @@ process {
         ]
     }
 
+    withName: MAGICBLAST {
+        publishDir = [
+            path: { "${params.outdir}/magicblast" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
