Added parsemagicblast version to conf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,4 +20,11 @@ process {
         ]
     }
 
+    withName: PARSEMAGICBLAST {
+        publishDir = [
+            path: { "${params.outdir}/parsemagicblast" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
