Added trimmomatic module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -27,4 +27,11 @@ process {
         ]
     }
 
+    withName: TRIMMOMATIC {
+        publishDir = [
+            path: { "${params.outdir}/trimmomatic" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
