Added interlacefasta module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -34,4 +34,11 @@ process {
         ]
     }
 
+    withName: INTERLACEFASTA {
+        publishDir = [
+            path: { "${params.outdir}/interlacefasta" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
