Added repeatexplorer module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -41,4 +41,11 @@ process {
         ]
     }
 
+    withName: REPEATEXPLORER {
+        publishDir = [
+            path: { "${params.outdir}/repeatexplorer" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
