Added preprocesstrf and disabled all other modules

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -6,46 +6,52 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: FASTQC {
+    # withName: FASTQC {
+    #     publishDir = [
+    #         path: { "${params.outdir}/fastqc" },
+    #         mode: params.publish_dir_mode
+    #     ]
+    # }
+
+    # withName: MAGICBLAST {
+    #     publishDir = [
+    #         path: { "${params.outdir}/magicblast" },
+    #         mode: params.publish_dir_mode
+    #     ]
+    # }
+
+    # withName: PARSEMAGICBLAST {
+    #     publishDir = [
+    #         path: { "${params.outdir}/parsemagicblast" },
+    #         mode: params.publish_dir_mode
+    #     ]
+    # }
+
+    # withName: TRIMMOMATIC {
+    #     publishDir = [
+    #         path: { "${params.outdir}/trimmomatic" },
+    #         mode: params.publish_dir_mode
+    #     ]
+    # }
+
+    # withName: INTERLACEFASTA {
+    #     publishDir = [
+    #         path: { "${params.outdir}/interlacefasta" },
+    #         mode: params.publish_dir_mode
+    #     ]
+    # }
+
+    # withName: REPEATEXPLORER {
+    #     publishDir = [
+    #         path: { "${params.outdir}/repeatexplorer" },
+    #         mode: params.publish_dir_mode
+    #     ]
+    # }
+    
+    withName: PREPROCESSTRF {
         publishDir = [
-            path: { "${params.outdir}/fastqc" },
+            path: { "${params.outdir}/preprocesstrf" },
             mode: params.publish_dir_mode
         ]
     }
-
-    withName: MAGICBLAST {
-        publishDir = [
-            path: { "${params.outdir}/magicblast" },
-            mode: params.publish_dir_mode
-        ]
-    }
-
-    withName: PARSEMAGICBLAST {
-        publishDir = [
-            path: { "${params.outdir}/parsemagicblast" },
-            mode: params.publish_dir_mode
-        ]
-    }
-
-    withName: TRIMMOMATIC {
-        publishDir = [
-            path: { "${params.outdir}/trimmomatic" },
-            mode: params.publish_dir_mode
-        ]
-    }
-
-    withName: INTERLACEFASTA {
-        publishDir = [
-            path: { "${params.outdir}/interlacefasta" },
-            mode: params.publish_dir_mode
-        ]
-    }
-
-    withName: REPEATEXPLORER {
-        publishDir = [
-            path: { "${params.outdir}/repeatexplorer" },
-            mode: params.publish_dir_mode
-        ]
-    }
-
 }
