Returned process.executor to local

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ manifest {
     version         = '1.0dev'
 }
 
-process.executor = 'pbs'
+// process.executor = 'pbs'
 
 // Global default params, used in configs
 params {
