--- a/conf/modules.config
+++ b/conf/modules.config
@@ -54,4 +54,18 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+
+    withName: QUAST {
+        publishDir = [
+            path: { "${params.outdir}/quast" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: TRF {
+        publishDir = [
+            path: { "${params.outdir}/trf" },
+            mode: params.publish_dir_mode
+        ]
+    }
 }
