Added rscipts module and init of 2 new modules

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -68,4 +68,25 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+
+    withName: PREPROCESSR {
+        publishDir = [
+            path: { "${params.outdir}/preprocessr" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: RSCRIPTS {
+        publishDir = [
+            path: { "${params.outdir}/rscipts" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: PYSCRIPTS {
+        publishDir = [
+            path: { "${params.outdir}/pyscripts" },
+            mode: params.publish_dir_mode
+        ]
+    }
 }
