--- a/nextflow.config
+++ b/nextflow.config
@@ -1,22 +1,12 @@
-/*
-========================================================================================
-    nf-core/test Nextflow config file
-========================================================================================
-    Default config options for all compute environments
-----------------------------------------------------------------------------------------
-*/
-
 manifest {
-    name            = 'nextflow-example'
-    author          = 'marc-jones'
-    homePage        = 'https://github.com/marc-jones/nextflow-example'
-    description     = 'A minimal Nextflow project compatible with nf-core'
+    name            = 'darevskia-pericentromere-analysis'
+    author          = 'nikitin-p,sidorov-si'
+    homePage        = 'https://github.com/nikitin-p/darevskia-pericentromere-analysis'
+    description     = 'Analysis of pericentromeric sequences of Darevskia lizards'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=21.04.0'
-    version         = '1.0dev'
+    version         = '1.0'
 }
-
-// process.executor = 'pbs'
 
 // Global default params, used in configs
 params {
@@ -67,22 +57,25 @@ params {
 
 }
 
+// Load base.config with resource allocation
+includeConfig 'conf/base.config'
+
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
 
 // Load nf-core custom profiles from different Institutions
-try {
-    includeConfig "${params.custom_config_base}/nfcore_custom.config"
-} catch (Exception e) {
-    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
-}
+// try {
+//     includeConfig "${params.custom_config_base}/nfcore_custom.config"
+// } catch (Exception e) {
+//     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+// }
 
 // Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
+// if (!params.igenomes_ignore) {
+//     includeConfig 'conf/igenomes.config'
+// } else {
+//     params.genomes = [:]
+// }
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
