Monomerprobe module init

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -76,6 +76,13 @@ process {
         ]
     }
 
+    withName: MONOMERPROBE {
+        publishDir = [
+            path: { "${params.outdir}/monomerprobe" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
     withName: RSCRIPTS {
         publishDir = [
             path: { "${params.outdir}/rscipts" },
