Renamed rscripts.nf into kmerprobe.nf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -83,9 +83,9 @@ process {
         ]
     }
 
-    withName: RSCRIPTS {
+    withName: KMERPROBE {
         publishDir = [
-            path: { "${params.outdir}/rscipts" },
+            path: { "${params.outdir}/kmerprobe" },
             mode: params.publish_dir_mode
         ]
     }
