Bowite2-build module init

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -96,4 +96,19 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+
+    withName: BOWTIE2BUILD {
+        publishDir = [
+            path: { "${params.outdir}/bowtie2build" },
+            mode: params.publish_dir_mode
+        ]
+        ext.args = '-f'
+    }
+
+    withName: BOWTIE2ALIGN {
+        publishDir = [
+            path: { "${params.outdir}/bowtie2align" },
+            mode: params.publish_dir_mode
+        ]
+    }
 }
