Fixed output file name in bowtie2_build.nf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -97,7 +97,7 @@ process {
         ]
     }
 
-    withName: BOWTIE2BUILD {
+    withName: BOWTIE2_BUILD {
         publishDir = [
             path: { "${params.outdir}/bowtie2build" },
             mode: params.publish_dir_mode
@@ -105,7 +105,7 @@ process {
         ext.args = '-f'
     }
 
-    withName: BOWTIE2ALIGN {
+    withName: BOWTIE2_ALIGN {
         publishDir = [
             path: { "${params.outdir}/bowtie2align" },
             mode: params.publish_dir_mode
