ParseSAM module init

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -111,5 +111,12 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+
+    withName: PARSESAM {
+        publishDir = [
+            path: { "${params.outdir}/parsesam" },
+            mode: params.publish_dir_mode
+        ]
+    }
     
 }
