Test repeatexplorer with full data

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -105,9 +105,9 @@ process {
         ext.args = '-f'
     }
 
-    withName: BOWTIE2_ALIGN {
+    withName: BOWTIE2_CROSS_ALIGN {
         publishDir = [
-            path: { "${params.outdir}/bowtie2align" },
+            path: { "${params.outdir}/bowtie2crossalign" },
             mode: params.publish_dir_mode
         ]
     }
@@ -115,6 +115,27 @@ process {
     withName: PARSESAM {
         publishDir = [
             path: { "${params.outdir}/parsesam" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: BOWTIE2_ALIGN {
+        publishDir = [
+            path: { "${params.outdir}/bowtie2align" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: EXTRACTCONTIG {
+        publishDir = [
+            path: { "${params.outdir}/extractcontig" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: EMBOSSNEEDLE {
+        publishDir = [
+            path: { "${params.outdir}/embossneedle" },
             mode: params.publish_dir_mode
         ]
     }
