Bowtie2 align clsat36 init

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -119,9 +119,9 @@ process {
         ]
     }
 
-    withName: BOWTIE2_ALIGN {
+    withName: BOWTIE2_CLSAT_ALIGN {
         publishDir = [
-            path: { "${params.outdir}/bowtie2align" },
+            path: { "${params.outdir}/bowtie2clsatalign" },
             mode: params.publish_dir_mode
         ]
     }
