BWA MEM mapping on valentini genome init

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -27,6 +27,21 @@ process {
         ]
     }
 
+    withName: BWA_INDEX {
+        publishDir = [
+            path: { "${params.outdir}/bwa_index" },
+            mode: params.publish_dir_mode
+        ]
+        ext.args = '-a bwtsw'
+    }
+
+    withName: BWA_MEM {
+        publishDir = [
+            path: { "${params.outdir}/bwa_mem" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
     withName: TRIMMOMATIC {
         publishDir = [
             path: { "${params.outdir}/trimmomatic" },
