Test rplots module with given files

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -105,9 +105,9 @@ process {
         ]
     }
 
-    withName: PYSCRIPTS {
+    withName: RPLOTS {
         publishDir = [
-            path: { "${params.outdir}/pyscripts" },
+            path: { "${params.outdir}/rplots" },
             mode: params.publish_dir_mode
         ]
     }
