--- a/conf/modules.config
+++ b/conf/modules.config
@@ -6,6 +6,13 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: SRATOOLS_FASTERQDUMP {
+        publishDir = [
+            path: { "${params.outdir}/fasterqdump" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
     withName: FASTQC {
         publishDir = [
             path: { "${params.outdir}/fastqc" },
