Downloadreads module init instead of fasterqdump

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -6,6 +6,20 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: DOWNLOADREADS {
+        publishDir = [
+            path: { "${params.outdir}/reads" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: DOWNLOADDBS {
+        publishDir = [
+            path: { "${params.outdir}/magicblast_databases" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
     withName: SRATOOLS_FASTERQDUMP {
         publishDir = [
             path: { "${params.outdir}/fasterqdump" },
