--- a/conf/base.config
+++ b/conf/base.config
@@ -9,6 +9,7 @@ process {
     errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
     maxRetries    = 1
     maxErrors     = '-1'
+    maxForks      = 1
 
     withLabel:process_low {
         cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
