Adapted resource allocation in base.config for a HPC

--- a/conf/base.config
+++ b/conf/base.config
@@ -15,25 +15,26 @@ process {
         memory = { check_max( 12.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 4.h   * task.attempt, 'time'    ) }
     }
+    
+    //withLabel:process_medium {
+    //    cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
+    //    memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
+    //    time   = { check_max( 8.h   * task.attempt, 'time'    ) }
+    //}
+    
     withLabel:process_medium {
-        cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
+        cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
+        memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 8.h   * task.attempt, 'time'    ) }
     }
-    
-    // withLabel:process_medium {
-    //     cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
-    //     memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
-    //     time   = { check_max( 8.h   * task.attempt, 'time'    ) }
-    // }
 
     withLabel:process_high {
         cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
         memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 96.h * task.attempt, 'time'     ) }
+        time   = { check_max( 72.h * task.attempt, 'time'     ) } // 96.h
     }
 
-    withLabel:process_long {
+    /*withLabel:process_long {
         time   = { check_max( 72.h  * task.attempt, 'time'    ) }
     }
     withLabel:process_high_memory {
@@ -45,5 +46,5 @@ process {
     withLabel:error_retry {
         errorStrategy = 'retry'
         maxRetries    = 2
-    }
+    }*/
 }
